fix: wrong header padding bottom - header overlaps progressbar during loading

--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -83,7 +83,7 @@ ion-header {
   ion-toolbar {
     @include from-sm {
       --padding-top: 23px;
-      --padding-bottom: 12px;
+      --padding-bottom: 10px;
     }
   }
 
